kubectl/network/externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: externalname
  namespace: default
spec:
  type: ExternalName
  externalName: external.example.com
