kubectl/network/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
      # nodePort: 30080 指定しない場合自動で割り当てられる
  selector:
    pod: nginx
