kubectl/network/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
        - backend:
            serviceName: svc1
            servicePort: 8080
  - host: bar.foo.com
    http:
      paths:
        - backend:
            serviceName: svc2
            servicePort: 8080
  tls:
    - hosts:
      - foo.bar.com
      secretName: tls
